--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ qt_add_qml_module(appqchess
         SOURCES controller.h controller.cpp
         SOURCES pieces.h
         SOURCES validator.h validator.cpp
+        SOURCES gamestate.h
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
