mate announcement, restart game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ project(qchess VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Quick QuickControls2)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -55,6 +55,8 @@ qt_add_qml_module(appqchess
         src/pieces.h
     RESOURCES
         resources/Alpha.ttf
+        QML_FILES qml/components/Promotion.qml
+        QML_FILES qml/components/GameOver.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -69,7 +71,7 @@ set_target_properties(appqchess PROPERTIES
 )
 
 target_link_libraries(appqchess
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::QuickControls2
 )
 
 include(GNUInstallDirs)
